@@ -25,7 +25,9 @@ apply plugin: 'com.github.johnrengelman.shadow'
 group 'com.scienceminer.glutton'
 version '0.3-SNAPSHOT'
 
-sourceCompatibility = 1.8
+//sourceCompatibility = 1.8
+sourceCompatibility = 1.11
+targetCompatibility = 1.11
 
 // The main class of the application
 mainClassName = 'com.scienceminer.glutton.web.LookupServiceApplication'
@@ -40,8 +42,14 @@ sourceSets.main.resources {
     srcDirs = ["src/main/resources"];
 }
 
+configurations {
+    all*.exclude group: 'org.slf4j', module: "slf4j-log4j12"
+    all*.exclude group: 'log4j', module: "log4j"
+    implementation.setCanBeResolved(true)
+}
+
 processResources {
-    filesMatching('../config/glutton.yml') {
+    filesMatching('config/glutton.yml') {
         filter {
             it.replace('project.version', project.property('version_placeholder'))
         }
@@ -66,7 +74,10 @@ dependencies {
     implementation "io.dropwizard:dropwizard-auth:1.3.29"
     implementation "io.dropwizard.metrics:metrics-core:4.0.5"
     implementation "io.dropwizard.metrics:metrics-servlets:4.0.5"
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.16.0'
+
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.8.2'
 
     implementation "com.rockymadden.stringmetric:stringmetric-core_2.10:0.27.3"
 
@@ -113,6 +124,7 @@ shadowJar {
     manifest {
         attributes 'Main-Class': mainClassName
     }
+    exclude("logback.xml")
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
@@ -125,20 +137,6 @@ artifacts {
 //    archives shadowDistZip
 //    archives shadowDistTar
 }
-
-/*
-java 
---add-opens java.base/java.nio=ALL-UNNAMED 
---add-opens java.base/java.lang=ALL-UNNAMED 
---add-opens java.base/java.math=ALL-UNNAMED 
---add-opens java.base/java.util=ALL-UNNAMED 
---add-opens java.base/java.util.concurrent=ALL-UNNAMED 
---add-opens java.base/java.net=ALL-UNNAMED 
---add-opens java.base/java.text=ALL-UNNAMED 
---add-opens java.base/sun.nio.ch=ALL-UNNAMED   
-
--jar build/libs/lookup-service-0.3-SNAPSHOT-onejar.jar hal config/glutton.yml
-*/
 
 task server(dependsOn: 'classes', type: JavaExec, group: 'service') {
     main = 'com.scienceminer.glutton.web.LookupServiceApplication'
